Scroll index.html

--- a/css/style.css
+++ b/css/style.css
@@ -1173,3 +1173,10 @@
 					margin-left: 0;
 					padding-left: 0;
 				}
+
+/* Scroll Location */
+
+	#top,#middle,#bottom{
+	    height: 600px;
+	    width: 300px;
+	}
