--- a/css/map.css
+++ b/css/map.css
@@ -1,5 +1,6 @@
-c#graphic-container {
-	position:relative;
+#graphic-container {
+	position:absolute;
+	
 	}
 
 #graphic-container #chart {
@@ -13,15 +14,15 @@ c#graphic-container {
 }
 
 
-#timeline {position:absolute;}
+#timeline {
+	position:absolute;
+}
 .hoverbox {position:absolute; padding:0.5em; background:#FFF; box-shadow:1px 1px 8px rgba(0,0,0,.4); z-index:300; font-family:"BentonSans", BentonSans, sans-serif; line-height:1.3em; min-width:100px; max-width:200px;}
 .statename {color: #9B1518;
 font: normal 0.8em/1.3 Helvetica, Arial, sans-serif;
 letter-spacing: 0.01em;
 text-transform: uppercase; clear:both;}
 .statepct {font-weight:bold; clear:both;}
-.statepct1 {font-weight:bold; clear:both;}
-.statepct2 {font-weight:bold; clear:both;}
 .statenum {}
 
 .boxkey {width: 1em; height:1em; float:left; margin-right:10px;}
