--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,17 @@
 				width: 100%;
 			}
 
+		.image.resize{
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+
+
+		}
+			.image.resize img{
+				width: 100%
+			}
+
 		.image.rounded {
 			border-radius: 100%;
 		}
@@ -562,6 +573,13 @@
 				box-shadow: 0px 0.0375em 0.125em 0px rgba(0, 0, 0, 0.15);
 				display: block;
 				padding: 2em 1em;
+			}
+		.image.info{
+		}
+			.image.info img{
+				img 
+    			width: 40%;
+    			height: auto;
 			}
 
 /* List */
@@ -847,7 +865,7 @@
 		input[type="button"].alt,
 		.button.alt {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
+			box-shadow: inset 0 0 0 2px rgba(255, 25, 25, 0.25);
 			color: #484848 !important;
 		}
 
@@ -855,14 +873,14 @@
 			input[type="reset"].alt:hover,
 			input[type="button"].alt:hover,
 			.button.alt:hover {
-				background-color: rgba(144, 144, 144, 0.075);
+				background-color: rgba(255, 25, 25, 0.075);
 			}
 
 			input[type="submit"].alt:active,
 			input[type="reset"].alt:active,
 			input[type="button"].alt:active,
 			.button.alt:active {
-				background-color: rgba(144, 144, 144, 0.2);
+				background-color: rgba(185, 0, 0, 0.2);
 			}
 
 			input[type="submit"].alt.icon:before,
@@ -1018,7 +1036,6 @@
 			box-shadow: none;
 			height: 3.25em;
 			line-height: 3.25em;
-			position: absolute;
 		}
 
 			#header.alt h1 {
