--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,10 @@
 		text-align: center;
 	}
 
+	section.left-special, article.left-special, header.left-special {
+		text-align: left;
+	}
+
 	header p {
 		color: #aaa;
 		position: relative;
